--- a/content/index.html
+++ b/content/index.html
@@ -1,86 +1,55 @@
 <!DOCTYPE html>
 <html>
  <head>
- <title>Dynamic Dropdown</title>
+ <title>Dummy Social Network</title>
  <style>
- #dummy-content
- {
- border:2px solid black;
- width:400px;
- height:400px;
- position: fixed;
- left:50px;
- top: 30px;
- border-radius: 10px;
- padding:5px;
- background: #ccddff;
- }
- #details
- {
- border:2px solid black;
- border-radius: 10px;
- width:400px;
- height:200px;
- position: fixed;
- left:530px;
- top:30px;
- padding:5px;
- background: #ccebff;
- }
- p
- {
- text-align: justify;
- }
- label
- {
- font-size: 23px;
- }
- .dropdown
- {
- font-size: 20px;
- border-radius: 5px;
- }
- </style>
+     label {
+        display: block;
+        font: .9rem 'Fira Sans', sans-serif;
+        }
+    input[type='submit'],
+        label {
+            margin-top: 1rem;
+        }
+  </style>
  <script>
- function getDetails()
- {
- var xhr = new XMLHttpRequest();
- var cont = document.getElementById("continents").value;
- xhr.open("POST", "http://localhost/ajax/get-countries.php", true);
- xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
- xhr.send("continent=" + cont); 
- xhr.onreadystatechange = function(){
- if (xhr.readyState == 4 && xhr.status== 200)
- {
- document.getElementById("countries").innerHTML = xhr.responseText
- }
- }
- }
+     function login(){
+        document.getElementById("message").innerHTML="";
+ 
+        var xhr = new XMLHttpRequest();
+        var name = document.getElementById("username").value;
+        var password = document.getElementById("pass").value;
+        xhr.open("GET", "http://localhost:9980/login?login=" + name+"&password="+password, true);
+        xhr.send();
+        
+        xhr.onreadystatechange = function(){
+            if (xhr.readyState == 4 && xhr.status== 200){
+                var jsonData = xhr.responseText;
+                var jsObject = JSON.parse(jsonData);
+                    if(jsObject.result==true){
+                        window.location="http://localhost:9980/main.html?session_id="+jsObject.session_id;
+                    } else {
+                        document.getElementById("message").innerHTML="<br><b>Invalid name or password</b><br>";
+                    }
+                }
+            }
+     };
  </script>
  </head>
  <body> 
- <div id="details">
- <h2>Select a continent from the dropdown:</h2>
- <label for="continents">Continent:</label>
- <select id="continents" class="dropdown" onchange="getDetails();">
- <option selected disabled>Select Continent</option>
- <option value="africa">Africa</option>
- <option value="asia">Asia</option>
- <option value="europe">Europe</option>
- <option value="n-america">North America</option>
- <option value="s-america">South America</option>
- <option value="australia">Australia</option>
- </select><br /><br />
- <label for="contries">Country:</label>
- <select id="countries" class="dropdown">
- <option value="">Select Country</option>
- </select> 
+ <h2>Dummy Social Network</h2>
+ <div>
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username">
  </div>
- <div id="dummy-content">
- <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
- <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.</p>
- <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</p>
- <p>Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. </p>
- </div> 
+
+<div>
+    <label for="pass">Password (8 characters minimum):</label>
+    <input type="password" id="pass" name="password"
+           minlength="8" required>
+</div>
+
+<div id="message"></div>
+<input type="submit" value="Sign in" onclick="login();">
  </body>
 </html>
