--- a/content/index.html
+++ b/content/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
  <head>
- <title>Dynamic Dropdown</title>
+ <title>Highload Homework</title>
  <style>
-     label {
-        display: block;
-        font: .9rem 'Fira Sans', sans-serif;
-        }
-    input[type='submit'],
-        label {
-            margin-top: 1rem;
-        }
+     #login
+     {
+         border: 2px solid darkgrey;
+         border-radius: 5px;
+         padding:15px;
+         margin: 100px auto;
+         width:300px;
+         height:300px;
+     }
   </style>
  <script>
      function login(){
@@ -37,20 +38,19 @@
  </script>
  </head>
  <body> 
- <h2>Dummy Social Network</h2>
- <div>
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username">
- </div>
-
-<div>
-    <label for="pass">Password (8 characters minimum):</label>
-    <input type="password" id="pass" name="password"
-           minlength="8" required>
-</div>
-
-<div id="message"></div>
-<input type="submit" value="Sign in" onclick="login();">
-<input type="submit" value="Sign up" onclick="window.location='signup.html';">
+    <div id="login">
+        <h2>Highload Homework</h2>
+        <label for="username">Username:</label><br/>
+        <input type="text" id="username" name="username">
+        <br/><br/>
+        <label for="pass">Password (8 characters minimum):</label><br/>
+        <input type="password" id="pass" name="password"
+            minlength="8" required>
+        <br/><br/>
+        <div id="message"></div>
+        <br/><br/>
+        <input type="submit" value="Sign in" onclick="login();">
+        <input type="submit" value="Sign up" onclick="window.location='signup.html';">
+    </div>
  </body>
 </html>
