--- a/content/main.html
+++ b/content/main.html
@@ -3,14 +3,30 @@
  <head>
  <title>Dummy Social Network</title>
  <style>
-     label {
-        display: block;
-        font: .9rem 'Fira Sans', sans-serif;
-        }
-    input[type='submit'],
-        label {
-            margin-top: 1rem;
-        }
+     #main
+     {
+         border: 2px solid darkgrey;
+         border-radius: 5px;
+         padding:15px;
+         margin: 100px auto;
+         width:300px;
+         height:400px;
+         position: fixed;
+         left:50px;
+         top: 30px;
+     }
+     #friends
+     {
+         border: 2px solid darkgrey;
+         border-radius: 5px;
+         padding:15px;
+         margin: 100px auto;
+         width:300px;
+         height:400px;
+         left:400px;
+         top:30px;
+         position: fixed;
+     }
   </style>
  <script>
      window.onload = function(){
@@ -38,30 +54,28 @@
  </script>
  </head>
  <body> 
- <h2>Personal information</h2>
- <div>
-    <label for="login">Username:</label>
+  <div id="main">
+    <h2>About</h2>
+    <label for="login">Username:</label><br/>
     <input type="text" id="login" name="login">
- </div>
-<div>
-    <label for="first_name">First Name:</label>
+    <br/><br/>
+    <label for="first_name">First Name:</label><br/>
     <input type="text" id="first_name" name="first_name">
-</div>
-<div>
-    <label for="last_name">Last Name:</label>
+    <br/><br/>
+    <label for="last_name">Last Name:</label><br/>
     <input type="text" id="last_name" name="last_name">
-</div>
-<div>
-    <label for="age">Age:</label>
+    <br/><br/>
+    <label for="age">Age:</label><br/>
     <input type="text" id="age" name="age">
-</div>
-<div>
-    <label for="hobby">Hobby:</label>
+    <br/><br/>
+    <label for="hobby">Hobby:</label><br/>
     <input type="text" id="hobby" name="hobby">
-</div>
-<div>
-    <label for="city">City:</label>
+    <br/><br/>
+    <label for="city">City:</label><br/>
     <input type="text" id="city" name="city">
-</div>
+  </div>
+  <div id="friends">
+    <h2>Friends</h2> 
+  </div>
  </body>
 </html>
