--- a/content/signup.html
+++ b/content/signup.html
@@ -3,14 +3,31 @@
  <head>
  <title>Dummy Social Network</title>
  <style>
-     label {
-        display: block;
-        font: .9rem 'Fira Sans', sans-serif;
-        }
-    input[type='submit'],
-        label {
-            margin-top: 1rem;
-        }
+     #main
+     {
+         border: 2px solid darkgrey;
+         border-radius: 5px;
+         padding:15px;
+         margin: 100px auto;
+         width:300px;
+         height:600px;
+         position: fixed;
+         left:50px;
+         top: 30px;
+     }
+     #message
+     {
+         border: 2px solid darkgrey;
+         border-radius: 5px;
+         padding:15px;
+         margin: 100px auto;
+         width: auto;
+         height: auto;
+         left:400px;
+         top:30px;
+         position: fixed;
+
+     }
   </style>
  <script>
      function check(){
@@ -59,40 +76,27 @@
  </script>
  </head>
  <body> 
- <h2>Enter Personal Data</h2>
- <div>
-    <label for="login">Username:</label>
-    <input type="text" id="login" name="login">
- </div>
- <div>
-    <label for="password1">Password:</label>
-    <input type="password" id="password1" name="password1">
-</div>
-<div>
-    <label for="password2">Re-type Password:</label>
-    <input type="password" id="password2" name="password2">
-</div>
-<div>
-    <label for="first_name">First Name:</label>
-    <input type="text" id="first_name" name="first_name">
-</div>
-<div>
-    <label for="last_name">Last Name:</label>
-    <input type="text" id="last_name" name="last_name">
-</div>
-<div>
-    <label for="age">Age:</label>
-    <input type="text" id="age" name="age">
-</div>
-<div>
-    <label for="hobby">Hobby:</label>
-    <input type="text" id="hobby" name="hobby">
-</div>
-<div>
-    <label for="city">City:</label>
-    <input type="text" id="city" name="city">
-</div>
-<div id="message"></div>
-<input type="submit" value="Sign up" onclick="check();">
+ <div id="main">
+   <h2>Enter Personal Data</h2>
+    <label for="login">Username:</label><br/>
+    <input type="text" id="login" name="login"><br/><br/>
+    <label for="password1">Password:</label><br/>
+    <input type="password" id="password1" name="password1"><br/><br/>
+    <label for="password2">Re-type Password:</label><br/>
+    <input type="password" id="password2" name="password2"><br/><br/>
+    <label for="first_name">First Name:</label><br/>
+    <input type="text" id="first_name" name="first_name"><br/><br/>
+    <label for="last_name">Last Name:</label><br/>
+    <input type="text" id="last_name" name="last_name"><br/><br/>
+    <label for="age">Age:</label><br/>
+    <input type="text" id="age" name="age"><br/><br/>
+    <label for="hobby">Hobby:</label><br/>
+    <input type="text" id="hobby" name="hobby"><br/><br/>
+    <label for="city">City:</label><br/>
+    <input type="text" id="city" name="city"><br/><br/>  
+    
+    <input type="submit" value="Sign up" onclick="check();">
+    </div>
+    <div id="message"></div>
 </body>
 </html>
